On editor page each accordion div has a fixed size and scrolling functionality has been added. Default collapse-show cancelled for each accordion element. Import page link problem fixed on the navigation bar. Create dataset page is updated, The list of instances are shown based on the choosen datastuructures. New actions and templates are added for creating dataset

--- a/mdb/static/styles/mdb.css
+++ b/mdb/static/styles/mdb.css
@@ -1,6 +1,6 @@
 
 .mdb-container {
-    margin: 0 auto; 
+    margin: 0 auto;
     text-align: left;
 }
 
@@ -14,12 +14,14 @@
 }
 
 .mdb-navbar {
-    background-color: #e3f2fd; 
+    background-color: #e3f2fd;
     margin-bottom: 10px;
 }
 
 .mdb-card-block {
     text-align: center;
+    overflow-y: auto;
+
 }
 
 .mdb-form-group {
